--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+
+    <!-- <script type="text/javascript" src="http://cdn-files.deezer.com/js/min/dz.js"></script> -->
 </head>
 
 <body>
