--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,18 @@ h3 {
 }
 
 .player-wrapper {
+    width: 240px;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     bottom: 0;
     background: #000;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
     padding: 1rem;
+    text-align: center;
     /* opacity: 0.25; */
-    filter: opacity(15%);
+    /* filter: opacity(15%); */
 }
 
 #player {
@@ -47,15 +49,22 @@ h3 {
 }
 
 .wrapper {
-    padding: 2rem 300px 2rem 2rem;
+    padding: 2rem 2rem 2rem 300px;
+}
+
+.ned-song__play-item {
+    width: 2.5rem;
+    height: 2.5rem;
+    border: none;
+    margin-right: 0.5rem;  
 }
 
 .ned-button--youtube {
     background: url("/img/youtube.svg");
-    width: 2.5rem;
+    /* width: 2.5rem;
     height: 2.5rem;
     border: none;
-    margin-right: 1rem;
+    margin-right: 0.5rem; */
 }
 
 /* .ned-date::before {
@@ -71,25 +80,19 @@ h3 {
     /* border-radius: 4px; */
     /* color: rgba(255, 255, 255, 0.9); */
     /* padding: 0.25rem 0.5rem; */
-    width: 2rem;
-    height: 2rem;
+    /* width: 2rem;
+    height: 2rem; */
     /* font-size: 0.75rem; */
     overflow: hidden;
     font-size: 1px;
     color: white;
-    margin-right: 0.25rem;
+    /* margin-right: 0.25rem; */
 }
 
-.ned-link--deezer {
-    content: url("/img/icons/brands/deezer.svg");
-}
-
-.ned-link--shazam {
-    content: url("/img/icons/brands/shazam.svg");
-}
-
-.ned-link--wikipedia {
-    content: url("/img/icons/brands/wikipedia.svg");
+.ned-song__link-icon {
+    margin: 0 0.5rem;
+    height: 2rem;
+    width: 2rem;
 }
 
 .ned-link--youtube {
@@ -101,33 +104,52 @@ h3 {
     padding: 1rem;
 
     display: grid;
-    grid-template-areas:
+    /* grid-template-areas:
       "header header"
       "play links"
-      "meta links";
+      "meta links"; */
+      grid-template-columns: max-content 1fr max-content;
+    grid-template-areas:
+      "playbuttons title links"
+      "playlinks subtitle meta";
   
 }
 
 .ned-song__header {
     grid-area: header;
-    /* background: #e0e0e0; */
 }
 
-.ned-song__play {
-    grid-area: play;
+.ned-song__play-buttons {
+    grid-area: playbuttons;
+    margin-right: 1rem;
     /* background: #e5e5e5; */
+}
+
+.ned-song__play-links {
+    grid-area: playlinks;
+    /* background: #efefef; */
+}
+
+.ned-song__title {
+    grid-area: title;
+    /* background: #e0e0e0; */
+    align-self: end;
+}
+
+.ned-song__subtitle {
+    grid-area: subtitle;
+    /* background: #d5d5d5; */
+    align-self: start;
 }
 
 .ned-song__links {
     grid-area: links;
-    align-self: center;
-    justify-self: right;
-    /* background: #efefef; */
+    justify-self: end;
 }
 
 .ned-song__meta {
     grid-area: meta;
-    /* background: #f5f5f5; */
+    justify-self: end;
 }
 
 .ned-badge {
@@ -142,4 +164,9 @@ h3 {
     text-align: center;
     vertical-align: baseline;
     white-space: nowrap;
+}
+
+.ned-site__title {
+    color: #fff;
+    font-size: 2rem;
 }
