--- a/css/main.css
+++ b/css/main.css
@@ -52,20 +52,7 @@ h3 {
     padding: 2rem 2rem 2rem 300px;
 }
 
-.ned-song__play-item {
-    width: 2.5rem;
-    height: 2.5rem;
-    border: none;
-    margin-right: 0.5rem;  
-}
 
-.ned-button--youtube {
-    background: url("/img/youtube.svg");
-    /* width: 2.5rem;
-    height: 2.5rem;
-    border: none;
-    margin-right: 0.5rem; */
-}
 
 /* .ned-date::before {
     content: url("/img/icons/ic_date_range_black_24px.svg");
@@ -75,28 +62,18 @@ h3 {
     content: url("/img/icons/ic_link_black_24px.svg");
 } */
 
-.ned-link--tir {
-    /* background: #000; */
-    /* border-radius: 4px; */
-    /* color: rgba(255, 255, 255, 0.9); */
-    /* padding: 0.25rem 0.5rem; */
-    /* width: 2rem;
-    height: 2rem; */
-    /* font-size: 0.75rem; */
-    overflow: hidden;
-    font-size: 1px;
-    color: white;
-    /* margin-right: 0.25rem; */
+.ned-song__play-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline-color: red;
+    padding: 0;
 }
 
 .ned-song__link-icon {
     margin: 0 0.5rem;
     height: 2rem;
     width: 2rem;
-}
-
-.ned-link--youtube {
-    content: url("/img/icons/brands/youtube.svg");
 }
 
 .ned-song {
