Simplify page and song list layout; improve CSS BEM naming

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,11 @@
 </head>
 
 <body>
-    <div class="wrapper">
-
-        <main class="quotes">
+    <div class="site-wrapper">
+        <header>
+            <h1 class="site-header__title">neverendingdrive</h1>
+        </header>
+        <main>
             {{ content }}
         </main>
         <footer>
